package br.com.mathewfinance.model;

public enum CategoryType {
    ENTRADA, GASTO
}
