package br.com.mathewfinance.model;

public enum TransactionType {
    ENTRADA, GASTO
}
